raw-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /app-a
            pathType: Prefix
            backend:
              service:
                name: app-a
                port:
                  number: 8080
          - path: /app-b
            pathType: Prefix
            backend:
              service:
                name: app-b
                port:
                  number: 8080
          - path: /app-c
            pathType: Prefix
            backend:
              service:
                name: app-c
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-a
                port:
                  number: 8080
          - path: /loki
            pathType: Prefix
            backend:
              service:
                name: loki-gateway
                port:
                  number: 80
---
## 외부 노출을 위한 NodePort Service
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007 #(default: 30000-32767)

---
## 테스트용 NodePort Service
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  type: NodePort
  selector:
    app: jaeger
    app.kubernetes.io/instance: jaeger-simple
    app.kubernetes.io/component: all-in-one
  ports:
    - port: 16686
      targetPort: 16686
      nodePort: 30009 #(default: 30000-32767)

---
